package com.homebanking.homebanking.models;

public interface Operacion {
    public void ejecutar();
}
