@startuml

package controller {
    class ClienteController {
        +crearCliente()
        +consultarCliente()
    }

    class CuentaBancariaController {
        +consultarCuenta()
        +depositar()
        +extraer()
        +transferir()
        +encontrarCuentas()
    }
}

package service {
    class CuentaBancariaService {
        +consultarMovimientos()

        +depositar()
        +retirar()
        +transferir()
    }

    class ClienteService{
        Cliente ObtenerClientePorDNI()
        boolean validarDNI()
    }
}

package models {
    package interfaces{

        interface Operacion{
            +void ejecutar()
        }
        interface Cuenta{
            +void depositar(Double monto)
            +void retirar(Double monto)
            +Double consultarSaldo()
        }

    }
    class CajadeAhorro{
        double saldo
        +void depositar(Double monto)
        +void retirar(Double monto)
        +Double consultarSaldo()
    }
    class Cliente {
        String dni
        String nombre
    }
    class CuentaBancaria {
        long nroCuenta
        Cliente cliente
        CajadeAhorro caja
    }
    class Movimiento{
        long id
        Long nroCuenta
        TipoMovimiento descripcion
        double monto
        LocalDateTime fechaMovimiento
    }
    class Transferencia{
        +void Transferencia(origen, destino, monto)
        +void ejecutar()
    }

    
CajadeAhorro ..|> interfaces.Cuenta
Transferencia ..|> interfaces.Operacion
}

package UI {
    interface Web {}

    interface CLI {}
}

package exceptions {

}

package manejador {
    class ManejadorException {
        +manejar(Exception)
    }
}

' Relaciones
ClienteController --> Cliente
CuentaBancariaController --> CuentaBancariaService
CuentaBancariaService --> CuentaBancaria
CuentaBancariaService --> Cliente
service--exceptions
manejador--exceptions
UI -- controller


CuentaBancariaController --> ManejadorException


@enduml